feat: navbar is sticky, adjusted posts and error pages to show navbar

--- a/frontend/ui/src/App.css
+++ b/frontend/ui/src/App.css
@@ -3,6 +3,6 @@
 }
 
 body {
-  background-color: var(--deep-grey);
+  background-color: var(--deep-grey) !important;
   font-family: "Roboto", Arial, Helvetica, sans-serif;
 }
