fix: removed hardcoded client urls and added testing buttons

--- a/frontend/ui/src/App.css
+++ b/frontend/ui/src/App.css
@@ -5,4 +5,5 @@
 body {
   background-color: var(--deep-grey) !important;
   font-family: "Roboto", Arial, Helvetica, sans-serif;
+  color: white !important;
 }
